@@ -5,6 +5,9 @@ Changelog
 1.5.1 (unreleased)
 ------------------
 
+- Fix save_as_pdf view. _parent seems to be an existing method with security declaration.
+  [mathias.leimgruber]
+
 - Add special preview View for ftw.workspace preview.
   [tschanzt]
 
